[gd_scene load_steps=14 format=2]

[ext_resource path="res://challenges/week8/gfx/door/door_closed.webp" type="Texture" id=1]
[ext_resource path="res://challenges/week8/scenes/door/door.gd" type="Script" id=2]
[ext_resource path="res://challenges/week8/gfx/door/door_open1.webp" type="Texture" id=3]
[ext_resource path="res://challenges/week8/gfx/door/door_open2.webp" type="Texture" id=4]
[ext_resource path="res://challenges/week8/gfx/door/door_open4.webp" type="Texture" id=5]
[ext_resource path="res://challenges/week8/gfx/door/door_open3.webp" type="Texture" id=6]
[ext_resource path="res://common/sfx/door/425089__neospica__metallic-door-shut.mp3" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": false,
"name": "closing",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), null ],
"loop": false,
"name": "opening",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 17.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33, 18 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 71.5, 35 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("door_up_CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -18.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("door_down_CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 18 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "opening"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("door_up_CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -18.5 ), Vector2( 0, -18.5 ), Vector2( 0, -26.5 ), Vector2( 0, -42.5 ), Vector2( 0, -51.5 ), Vector2( 0, -53.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("door_down_CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 18 ), Vector2( 0, 21 ), Vector2( 0, 30 ), Vector2( 0, 44 ), Vector2( 0, 53 ), Vector2( 0, 54 ) ]
}

[node name="door" type="StaticBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "opening"
frame = 4

[node name="door_up_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -18.5 )
shape = SubResource( 1 )

[node name="door_down_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 18 )
shape = SubResource( 2 )

[node name="open_door_area2D" type="Area2D" parent="."]
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="open_door_area2D"]
position = Vector2( -34.5, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/opening = SubResource( 6 )

[node name="DoorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="open_door_area2D" to="." method="_on_open_door_area2D_body_entered"]
[connection signal="body_exited" from="open_door_area2D" to="." method="_on_open_door_area2D_body_exited"]
